# Pavillong3DGS

./: .gitignore  CLAUDE.md  README.md  environment.yml  pyproject.toml  requirements-lock-cu128.txt  requirements-lock.txt
configs/cluster/: local.yaml  slurm.yaml
configs/pipeline/: README.md  object_high_quality.yaml  object_turntable.yaml  pavillon_multiclip_cap375k.yaml  pavillon_orbit_2dgs.yaml  pavillon_orbit_hidetail.yaml  pavillon_orbit_hidetail_cap750k.yaml  pavillon_orbit_hq.yaml  pavillon_orbit_reg_nodepth.yaml  scene_pavillon.yaml  smoke_test.yaml
docs/: capture_guide.md  cluster_environment.md  colmap_guide.md  experiment_protocol.md  pipeline_architecture.md  reproduce_casque.md  reproduce_pavillon.md  technique_transfer.md  troubleshooting.md  video_to_3dgs_plan.md
docs/report/: experiments.tex  main.tex  references.bib  related_work.tex  theory.tex
experiments/: SMOKE_TEST_OK  env_GPURACK5.json  registry.csv
scripts/: _activate_env.sh  _normal_quality.py  bootstrap_environment.sh  capacity_curve.py  crop_object.py  diffusion_refine_test.py  dist_collapse_figure.py  floater_ab.py  floater_spatial.py  gsplat_selftest.py  inspect_cluster.sh  make_box_masks.py  make_demo_assets.py  mesh_preview.py  object_metrics.py  object_vs_scene_val.py  offaxis_analysis.py  run_pipeline.sh  run_smoke_test.sh  specular_diagnostic.py  specular_selftest.py  subject_quality.py  sync_scratch.sh
scripts/slurm/: _spec_check.sbatch  evaluate.sbatch  preprocess.sbatch  sweep.sbatch  train.sbatch
src/video_to_3dgs/: __init__.py  cli.py  colmap_io.py  environment.py  media.py
state/: decisions.md  progress.md
tests/: conftest.py
tests/unit/: test_appearance.py  (+18 more)
(+78 files in other folders)
